# syrok-gl

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt
assets/: syrok.glsl  vert_quad.glsl
src/: error.c  error.h  globals.h  main.c  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h
